# scmm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.sh  check.sh  compile.sh  demo.sh  demo_auto.sh  demo_auto_strace.sh  enforce.sh  unit.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
sandboxes/nginx/: .gitignore  enforce.sh  full_demo.sh  nginx.conf  start_normal.sh  trace.sh
sandboxes/nginx/conf/: nginx.conf
sandboxes/nginx/html/: index.html
sandboxes/nginx/html/noaccess/: index.html
scmm-common/: Cargo.toml
scmm-common/src/: capture.rs  categories.rs  flags.rs  lib.rs  policy.rs  syscall.rs
scmm-compile/: Cargo.toml
scmm-compile/src/: codegen.rs  main.rs  validator.rs
scmm-ebpf/: Cargo.toml
scmm-ebpf/src/: main.rs  record.rs
scmm-enforce/: Cargo.toml
scmm-enforce/src/: landlock.rs  loader.rs  main.rs  seccomp.rs
scmm-extract/: Cargo.toml
scmm-extract/src/: generalize.rs  interactive.rs  main.rs  parser.rs  strace_parser.rs  yaml.rs
scmm-merge/: Cargo.toml
scmm-merge/src/: main.rs  merge.rs
scmm-record/: Cargo.toml  build.rs
scmm-record/src/: capture.rs  loader.rs  main.rs
tests/: patch_on_missing.py  run_all.sh  test_attach.sh  test_echo.sh  test_exclude_failed.sh  test_ls.sh  test_merge.sh  test_network.sh  test_network_strace.sh  test_nginx.sh  test_ping.sh  test_strace.sh  test_touch.sh
xtask/: Cargo.toml
xtask/src/: main.rs
