[workspace]
resolver = "2"
members = [
    "scmm-common",
    "scmm-ebpf",
    "scmm-record",
    "scmm-extract",
    "scmm-compile",
    "scmm-enforce",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["SysCallMeMaybe Authors"]
description = "SysCallMeMaybe (SCMM) - Linux syscall recording and sandboxing suite"
repository = "https://github.com/scmm/scmm"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1.35", features = ["full"] }

# eBPF (userspace)
aya = "0.12"
aya-log = "0.2"

# Enforcement
landlock = "0.4"

# Interactive CLI
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Compression
lz4_flex = "0.11"

# Byte manipulation
byteorder = "1.5"
bytes = "1.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
