[package]
name = "scmm-compile"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SysCallMeMaybe policy compiler - converts YAML to binary format"

[dependencies]
scmm-common = { path = "../scmm-common" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
serde.workspace = true
serde_yaml.workspace = true
byteorder.workspace = true
caps = "0.5.6"
nix = { version = "0.28", features = ["user"] }

[[bin]]
name = "scmm-compile"
path = "src/main.rs"
