[package]
name = "scmm-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SysCallMeMaybe policy extractor - interactive rule generation from captures"

[dependencies]
scmm-common = { path = "../scmm-common" }
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_yaml.workspace = true
bincode.workspace = true
byteorder.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
chrono.workspace = true
regex = "1.10"
glob = "0.3"
serde_json = "1.0"

[[bin]]
name = "scmm-extract"
path = "src/main.rs"
