[package]
name = "scmm-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SysCallMeMaybe policy extractor - interactive rule generation from captures"

[dependencies]
scmm-common = { path = "../scmm-common" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
serde.workspace = true
serde_yaml.workspace = true
byteorder.workspace = true
dialoguer.workspace = true
console.workspace = true
chrono.workspace = true
serde_json = "1.0"

[[bin]]
name = "scmm-extract"
path = "src/main.rs"
