[package]
name = "scmm-record"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SysCallMeMaybe recorder - captures syscalls using eBPF"

[dependencies]
scmm-common = { path = "../scmm-common" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
aya.workspace = true
byteorder.workspace = true
serde.workspace = true
libc = "0.2"
nix = { version = "0.28", features = ["process", "signal", "user"] }
ctrlc = "3.4"
gethostname = "0.4"
serde_json = "1.0"

[[bin]]
name = "scmm-record"
path = "src/main.rs"
